--- a/extensions/amp-soundcloud/0.1/test/validator-amp-soundcloud.html
+++ b/extensions/amp-soundcloud/0.1/test/validator-amp-soundcloud.html
@@ -44,6 +44,9 @@
   <!-- valid: responsive layout -->
   <amp-soundcloud height=166 width=42 data-trackid="243169232" data-visual="true"
                   layout="responsive"></amp-soundcloud>
+  <!-- valid: intrinsic layout -->
+  <amp-soundcloud height=166 width=42 data-trackid="243169232" data-visual="true"
+                  layout="intrinsic"></amp-soundcloud>
   <!-- invalid: flex-item	 layout -->
   <amp-soundcloud height=166 width=42 data-trackid="243169232" data-visual="true"
                   layout="flex-item"></amp-soundcloud>
