Add facebook social share without appid

--- a/examples/social-share.amp.html
+++ b/examples/social-share.amp.html
@@ -66,9 +66,13 @@
       <amp-social-share type="facebook"
                         data-param-text="Hello world"
                         data-param-href="https://example.com/?ref=URL"
-                        data-param-app_id="145634995501895"
                         aria-label="Share to Facebook">
       </amp-social-share>
+      <amp-social-share type="facebook-url"
+                        data-param-u="https://www.google.com"
+                        aria-label="Share to Facebook">
+      </amp-social-share>
+
       <amp-social-share type="twitter"
                         aria-label="Share to Twitter">
       </amp-social-share>
