--- a/examples/amp-mplayer.amp.html
+++ b/examples/amp-mplayer.amp.html
@@ -5,7 +5,7 @@
   <title>amp-mplayer example</title>
   <link rel="canonical" href="amps.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <script async custom-element="amp-mplayer" src="http://localhost:8000/dist/v0/amp-mplayer-0.1.max.js"></script>
+  <script async custom-element="amp-mplayer" src="http://localhost:8000/dist/v0/amp-minute-media-player-0.1.max.js"></script>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-video-docking" src="https://cdn.ampproject.org/v0/amp-video-docking-0.1.js"></script>
   <style amp-custom>
@@ -26,28 +26,29 @@
 </head>
 <body>
 
-  <h1>MPlayer AMP Examples</h1>
+  <h1>Minute Media Player AMP Examples</h1>
 
   <div class="space-between-videos"></div>
 
   <h2>Specific Video</h2>
-  <amp-mplayer
+  <amp-minute-media-player
     data-content-type="curated"
     data-content-id="fSkmeWKF"
     width="500" height="334"
-    layout="flex-item"></amp-mplayer>
+    layout="flex-item"
+    autoplay></amp-minute-media-player>
 
   <div class="space-between-videos"></div>
 
   <h2>Semantic</h2>
-    <amp-mplayer
+  <amp-minute-media-player
       dock
       data-content-type="semantic"
       data-minimum-date-factor="10"
       data-scanned-element-type="tag"
       data-scanned-element="post-body"
       data-tags="ofir"
-      layout="responsive" width="9" height="6"></amp-mplayer>
+      layout="responsive" width="9" height="6"></amp-minute-media-player>
 
   <div class="end-of-page-space"></div>
 
