--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -145,6 +145,7 @@
         <option>felmat</option>
         <option>flite</option>
         <option>fluct</option>
+        <option>forkmedia</option>
         <option>freewheel</option>
         <option>fusion</option>
         <option>genieessp</option>
@@ -1105,6 +1106,13 @@
       type="fluct"
       data-g="1000067784"
       data-u="1000101409">
+  </amp-ad>
+
+  <h2>Fork Media</h2>
+  <amp-ad width="50" height="66"
+      type="forkmedia"
+      src = "https://delivery.forkcdn.com/rappio/inread/v1.1/amp/inread.js"
+      data-html-access-allowed>
   </amp-ad>
 
   <h2>Fusion</h2>
