--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -185,6 +185,7 @@
         <option>mox</option>
         <option>mytarget</option>
         <option>mywidget</option>
+        <option>nativeroll</option>
         <option>nativo</option>
         <option>navegg</option>
         <option>nend</option>
@@ -1434,6 +1435,14 @@
       type="mywidget"
       data-cid="ed1538fc077cfeae6ea558f6e7404541">
   </amp-embed>
+
+  <h2>Nativeroll</h2>
+  <amp-ad width="640" height="480"
+          type="nativeroll"
+          data-gid="5d10df709762b6b31b8b461e"
+          data-container="p"
+          data-desiredOffset="2p">
+  </amp-ad>
 
   <h2>Nativo</h2>
   <amp-ad width="350" height="150"
