Added prefetch and changed main logic

--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -1111,7 +1111,7 @@
   <h2>Fork Media</h2>
   <amp-ad width="50" height="66"
       type="forkmedia"
-      src = "https://delivery.forkcdn.com/rappio/inread/v1.1/amp/inread.js"
+      data-product="inread"
       data-html-access-allowed>
   </amp-ad>
 
