--- a/test/fixtures/e2e/testsw/sw.html
+++ b/test/fixtures/e2e/testsw/sw.html
@@ -22,97 +22,96 @@
         Success
       </div>
   </form>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-  <p>Wow this is a lot of text</p>
-
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
+  <p>Lorem ipsum, dolor sit amet</p>
   <amp-img src="/examples/img/sample.jpg?wow" layout="responsive" width="4" height="3"></amp-img>
 </body>
 </html>
