--- a/examples/amp-minute-media-player.amp.html
+++ b/examples/amp-minute-media-player.amp.html
@@ -2,10 +2,10 @@
 <html ⚡>
 <head>
   <meta charset="utf-8">
-  <title>amp-mplayer example</title>
+  <title>amp-minute-media-player example</title>
   <link rel="canonical" href="amps.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <script async custom-element="amp-mplayer" src="http://localhost:8000/dist/v0/amp-minute-media-player-0.1.max.js"></script>
+  <script async custom-element="amp-minute-media-player" src="http://localhost:8000/dist/v0/amp-minute-media-player-0.1.max.js"></script>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-video-docking" src="https://cdn.ampproject.org/v0/amp-video-docking-0.1.js"></script>
   <style amp-custom>
@@ -47,7 +47,6 @@
       data-minimum-date-factor="10"
       data-scanned-element-type="tag"
       data-scanned-element="post-body"
-      data-tags="ofir"
       layout="responsive" width="9" height="6"></amp-minute-media-player>
 
   <div class="end-of-page-space"></div>
