Allow to always show fallback instead of collapsing

--- a/examples/a4a.amp.html
+++ b/examples/a4a.amp.html
@@ -95,5 +95,14 @@
     type="doubleclick"
     width="300">
   </amp-ad>
+
+  <h2>Empty ad with fallback</h2>
+  <amp-ad data-slot="/30497360/a4a/empty"
+      data-on-no-content="fallback"
+      height="250"
+      type="doubleclick"
+      width="300">
+    <div fallback></div>
+  </amp-ad>
 </body>
 </html>
