--- a/examples/amp-minute-media-player.amp.html
+++ b/examples/amp-minute-media-player.amp.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <script async custom-element="amp-minute-media-player" src="http://localhost:8000/dist/v0/amp-minute-media-player-0.1.max.js"></script>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <script async custom-element="amp-video-docking" src="https://cdn.ampproject.org/v0/amp-video-docking-0.1.js"></script>
+  <script async custom-element="amp-video-docking" src="http://localhost:8000/dist/v0/amp-video-docking-0.1.max.js"></script>
   <style amp-custom>
 
     body {
@@ -32,22 +32,22 @@
 
   <h2>Specific Video</h2>
   <amp-minute-media-player
+    autoplay
     data-content-type="curated"
     data-content-id="fSkmeWKF"
     width="500" height="334"
-    layout="flex-item"
-    autoplay></amp-minute-media-player>
+    layout="flex-item"></amp-minute-media-player>
 
   <div class="space-between-videos"></div>
 
   <h2>Semantic</h2>
   <amp-minute-media-player
-      dock
-      data-content-type="semantic"
-      data-minimum-date-factor="10"
-      data-scanned-element-type="tag"
-      data-scanned-element="post-body"
-      layout="responsive" width="9" height="6"></amp-minute-media-player>
+    dock
+    data-content-type="semantic"
+    data-minimum-date-factor="10"
+    data-scanned-element-type="tag"
+    data-scanned-element="post-body"
+    layout="responsive" width="9" height="6"></amp-minute-media-player>
 
   <div class="end-of-page-space"></div>
 
