expand blink el on click

--- a/examples/amp-story/bling-link.html
+++ b/examples/amp-story/bling-link.html
@@ -60,7 +60,9 @@
                 max-width="210"
                 layout="fixed">
               </amp-img>
-              <a id="blink-2" href="https://amp.dev" role="link" class="i-amphtml-story-bling-link"></a>
+              <a id="blink-2" href="https://amp.dev" role="link" class="i-amphtml-story-bling-link">
+                amp.devamp.devamp.devamp.devamp.devamp.dev
+              </a>
             </amp-story-grid-layer>
         </amp-story-page>
 
