changing the message handling

--- a/examples/amp-minute-media-player.amp.html
+++ b/examples/amp-minute-media-player.amp.html
@@ -35,8 +35,8 @@
     autoplay
     data-content-type="curated"
     data-content-id="fSkmeWKF"
-    width="500" height="334"
-    layout="flex-item"></amp-minute-media-player>
+    width="9" height="6"
+    layout="responsive"></amp-minute-media-player>
 
   <div class="space-between-videos"></div>
 
