--- a/examples/analytics.amp.html
+++ b/examples/analytics.amp.html
@@ -83,7 +83,7 @@ Container for analytics tags. Positioned far away from top to make sure that doe
     "visibility": {
       "on": "visible",
       "request": "visibility",
-      "selector": "#anim-id",
+      "selector": "#anim-idasdf",
       "visibilitySpec": {
         "visiblePercentageMin": 20,
         "visiblePercentageMax": 80,
@@ -279,6 +279,7 @@ Donec pharetra molestie sollicitudin. Duis mattis eleifend rutrum. Quisque luctu
 <li>Aenean ac sem eget libero varius viverra sit amet vitae nunc.</li>
 </ul>
 </p>
+<div id="anim-idasdf">asdf</div>
 <amp-anim src="https://www.google.com/logos/doodles/2016/2016-doodle-fruit-games-day-14-5645577527230464-hp.gif" id="anim-id" width="665" height="220" layout="responsive">
   <amp-img placeholder src="https://www.google.com/logos/doodles/2016/2016-doodle-fruit-games-day-14-5645577527230464.2-scta.png" width="665" height="220" layout="responsive"></amp-img>
   <amp-analytics id="nestedAnalytics">
