--- a/examples/amp-minute-media-player.amp.html
+++ b/examples/amp-minute-media-player.amp.html
@@ -6,6 +6,7 @@
   <link rel="canonical" href="amps.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <script async custom-element="amp-minute-media-player" src="http://localhost:8000/dist/v0/amp-minute-media-player-0.1.max.js"></script>
+  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-video-docking" src="http://localhost:8000/dist/v0/amp-video-docking-0.1.max.js"></script>
   <style amp-custom>
@@ -36,7 +37,8 @@
     data-content-type="curated"
     data-content-id="fSkmeWKF"
     width="160" height="96"
-    layout="responsive"></amp-minute-media-player>
+    layout="responsive">
+  </amp-minute-media-player>
 
   <div class="space-between-videos"></div>
 
@@ -47,7 +49,8 @@
     data-minimum-date-factor="10"
     data-scanned-element-type="tag"
     data-scanned-element="post-body"
-    layout="responsive" width="160" height="96"></amp-minute-media-player>
+    layout="responsive" width="160" height="96">
+  </amp-minute-media-player>
 
   <div class="end-of-page-space"></div>
 
