adding data-scoped-keywords attribute to the extension

--- a/examples/amp-minute-media-player.amp.html
+++ b/examples/amp-minute-media-player.amp.html
@@ -49,6 +49,7 @@
     data-minimum-date-factor="10"
     data-scanned-element-type="tag"
     data-scanned-element="post-body"
+    data-scoped-keywords="football"
     layout="responsive" width="160" height="96">
   </amp-minute-media-player>
 
