--- a/extensions/amp-minute-media-player/0.1/test/validator-amp-minute-media-player.html
+++ b/extensions/amp-minute-media-player/0.1/test/validator-amp-minute-media-player.html
@@ -73,6 +73,7 @@
     dock
     data-content-type="semantic"
     data-minimum-date-factor="10"
+    data-scoped-keywords="football"
     layout="responsive" width="160" height="96">
   </amp-minute-media-player>
 
