Do not change app.js

--- a/examples/bfcache/analytics-report-when.html
+++ b/examples/bfcache/analytics-report-when.html
@@ -59,17 +59,17 @@
   <h2>Wow 1</h2>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias quas laborum voluptate culpa error asperiores similique facere, natus ullam beatae quos. Asperiores reiciendis, assumenda placeat architecto eius iusto distinctio nesciunt.</p>
   <amp-img id="target" src="/examples/img/hero@1x.jpg" layout="responsive" width="640" height="480"></amp-img>
-  <a href="analytics.html?index=__PAGE_INDEX__">Next page</a>
+  <a href="analytics-report-when.html?page=QUERY_PARAM(page)0" data-amp-replace="QUERY_PARAM">Next page</a>
 
   <h2>Wow 2</h2>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias quas laborum voluptate culpa error asperiores similique facere, natus ullam beatae quos. Asperiores reiciendis, assumenda placeat architecto eius iusto distinctio nesciunt.</p>
   <amp-img src="/examples/img/hero@1x.jpg" layout="responsive" width="640" height="480"></amp-img>
-  <a href="analytics.html?index=__PAGE_INDEX__">Next page</a>
+  <a href="analytics-report-when.html?page=QUERY_PARAM(page)1" data-amp-replace="QUERY_PARAM">Next page</a>
 
   <h2>Wow 3</h2>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias quas laborum voluptate culpa error asperiores similique facere, natus ullam beatae quos. Asperiores reiciendis, assumenda placeat architecto eius iusto distinctio nesciunt.</p>
   <amp-img src="/examples/img/hero@1x.jpg" layout="responsive" width="640" height="480"></amp-img>
-  <a href="analytics.html?index=__PAGE_INDEX__">Next page</a>
+  <a href="analytics-report-when.html?page=QUERY_PARAM(page)2" data-amp-replace="QUERY_PARAM">Next page</a>
   <amp-list src="/list/infinite-scroll-random/animals" layout="fixed-height" height="300" load-more="manual">
     <template type="amp-mustache">
       <amp-img layout=responsive width=3 height=2 src={{src}}></amp-img>
@@ -80,12 +80,12 @@
   <h2>Wow 4</h2>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias quas laborum voluptate culpa error asperiores similique facere, natus ullam beatae quos. Asperiores reiciendis, assumenda placeat architecto eius iusto distinctio nesciunt.</p>
   <amp-img src="/examples/img/hero@1x.jpg" layout="responsive" width="640" height="480"></amp-img>
-  <a href="analytics.html?index=__PAGE_INDEX__">Next page</a>
+  <a href="analytics-report-when.html?page=QUERY_PARAM(page)3" data-amp-replace="QUERY_PARAM">Next page</a>
 
   <h2>Wow 5</h2>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias quas laborum voluptate culpa error asperiores similique facere, natus ullam beatae quos. Asperiores reiciendis, assumenda placeat architecto eius iusto distinctio nesciunt.</p>
   <amp-img src="/examples/img/hero@1x.jpg" layout="responsive" width="640" height="480"></amp-img>
-  <a href="analytics.html?index=__PAGE_INDEX__">Next page</a>
+  <a href="analytics-report-when.html?page=QUERY_PARAM(page)4" data-amp-replace="QUERY_PARAM">Next page</a>
 </main>
 </body>
 </html>
