--- a/examples/visual-tests/amp-ad/amp-inabox-image.html
+++ b/examples/visual-tests/amp-ad/amp-inabox-image.html
@@ -2,19 +2,19 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>AMP inabox Doubleclick ad test</title>
+  <title>AMP Inabox Test</title>
   <link rel="canonical" href="https://amp.dev/documentation/examples/introduction/hello_world/index.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 </head>
 <body>
-<h1>AMP inabox Doubleclick ad test 2</h1>
+<h1>AMPHTML ad - Inabox - /amp-ad/resource/image.html</h1>
 <iframe id="inabox-doubleclick"
         width="300" height="250"
         scrolling="no"
         marginwidth="0"
         marginheight="0"
         frameborder="0"
-        src="/examples/visual-tests/amp-ad/doubleclick/image.html">
+        src="/examples/visual-tests/amp-ad/resource/image.html">
 </iframe>
 </body>
 </html>
