Actually, don't diff attribs for simplicity.

--- a/examples/amp-list.amp.html
+++ b/examples/amp-list.amp.html
@@ -70,16 +70,16 @@
     <div fetch-error>FETCH-ERROR</div>
 
     <div role="list"><div role="listitem">
-      <amp-img data-foo=1 alt="amp-carousel" width="50" height="50" src="http://localhost:8000/examples/img/ampicon.png" class="i-amphtml-element i-amphtml-layout-fixed i-amphtml-layout-size-defined i-amphtml-layout" i-amphtml-layout="fixed" style="width: 50px; height: 50px;"><img decoding="async" alt="amp-carousel" src="http://localhost:8000/examples/img/ampicon.png" class="i-amphtml-fill-content i-amphtml-replaced-content"></amp-img>
+      <amp-img data-foo=1 alt="amp-carousel" width="50" height="50" src="http://localhost:8000/examples/img/ampicon.png"></amp-img>
       <a target="_top" href="http://localhost:8000/components/amp-carousel/">amp-carousel</a>
     </div><div role="listitem">
-      <amp-img data-foo=2 alt="amp-img" width="50" height="50" src="http://localhost:8000/examples/img/ampicon.png" class="i-amphtml-element i-amphtml-layout-fixed i-amphtml-layout-size-defined i-amphtml-layout" i-amphtml-layout="fixed" style="width: 50px; height: 50px;"><img decoding="async" alt="amp-img" src="http://localhost:8000/examples/img/ampicon.png" class="i-amphtml-fill-content i-amphtml-replaced-content"></amp-img>
+      <amp-img data-foo=2 alt="amp-img" width="50" height="50" src="http://localhost:8000/examples/img/ampicon.png"></amp-img>
       <a target="_top" href="http://localhost:8000/components/amp-img/">amp-img</a>
     </div><div role="listitem">
-      <amp-img data-foo=3 alt="amp-ad" width="50" height="50" src="http://localhost:8000/examples/img/ampicon.png" class="i-amphtml-element i-amphtml-layout-fixed i-amphtml-layout-size-defined i-amphtml-layout" i-amphtml-layout="fixed" style="width: 50px; height: 50px;"><img decoding="async" alt="amp-ad" src="http://localhost:8000/examples/img/ampicon.png" class="i-amphtml-fill-content i-amphtml-replaced-content"></amp-img>
+      <amp-img data-foo=3 alt="amp-ad" width="50" height="50" src="http://localhost:8000/examples/img/ampicon.png"></amp-img>
       <a target="_top" href="http://localhost:8000/components/amp-ad/">amp-ad</a>
     </div><div role="listitem">
-      <amp-img data-foo=4 alt="amp-accordion" width="50" height="50" src="http://localhost:8000/examples/img/ampicon.png" class="i-amphtml-element i-amphtml-layout-fixed i-amphtml-layout-size-defined i-amphtml-layout" i-amphtml-layout="fixed" style="width: 50px; height: 50px;"><img decoding="async" alt="amp-accordion" src="http://localhost:8000/examples/img/ampicon.png" class="i-amphtml-fill-content i-amphtml-replaced-content"></amp-img>
+      <amp-img data-foo=4 alt="amp-accordion" width="50" height="50" src="http://localhost:8000/examples/img/ampicon.png"></amp-img>
       <a target="_top" href="http://localhost:8000/components/amp-accordion/">amp-accordion</a>
     </div></div>
   </amp-list>
