use pixel as a means to ping url to track pageview

--- a/examples/article-fixed-header.amp.html
+++ b/examples/article-fixed-header.amp.html
@@ -241,6 +241,8 @@
   <link rel="manifest" href="medium-manifest.json">
 </head>
 <body>
+<amp-pixel src="https://foo.com/tracker/foo?page=${sourceUrl}"
+    layout="nodisplay"></amp-pixel>
   <div class="logo"></div>
   <amp-sidebar id="sidebar" layout="nodisplay">
     <nav>
