--- a/examples/article-parallax.amp.html
+++ b/examples/article-parallax.amp.html
@@ -77,6 +77,8 @@
   </style>
 </head>
 <body>
+<amp-pixel src="https://foo.com/tracker/foo?page=${sourceUrl}"
+    layout="nodisplay"></amp-pixel>
   <main>
     <header>
       <h1 amp-fx="parallax" data-parallax-factor="1.5">
