--- a/examples/article.amp.html
+++ b/examples/article.amp.html
@@ -315,6 +315,8 @@
   <link rel="manifest" href="medium-manifest.json">
 </head>
 <body>
+<amp-pixel src="https://foo.com/tracker/foo?page=article"
+    layout="nodisplay"></amp-pixel>
   <amp-sidebar id="sidebar" layout="nodisplay">
     <nav>
       <ul>
