--- a/examples/amphtml-ads/many-ads.host.html
+++ b/examples/amphtml-ads/many-ads.host.html
@@ -15,9 +15,9 @@
       width: calc(100vw - 2px);
       height: 250px;
       border: 1px solid lightgrey;
-      margin-bottom: 30px;
     }
     hr {
+      margin-top: 30px;
       border-top:1px dashed #999;
     }
   </style>
@@ -28,36 +28,42 @@
     src="//ads.localhost:8000/examples/amphtml-ads/adchoices-1.a4a.html"
     scrolling="no">
 </iframe>
+<a href="/inabox/examples/amphtml-ads/adchoices-1.a4a.html" target="_blank">open in new tab</a>
 <hr>
 <h3>Carousel ad</h3>
 <iframe
     src="//ads.localhost:8000/examples/amphtml-ads/carousel-ad.a4a.html"
     scrolling="no">
 </iframe>
+<a href="/inabox/examples/amphtml-ads/carousel-ad.a4a.html" target="_blank">open in new tab</a>
 <hr>
 <h3>Slides ad</h3>
 <iframe
     src="//ads.localhost:8000/examples/amphtml-ads/slides-ad.a4a.html"
     scrolling="no">
 </iframe>
+<a href="/inabox/examples/amphtml-ads/slides-ad.a4a.html" target="_blank">open in new tab</a>
 <hr>
 <h3>Scrollbound animation ad</h3>
 <iframe
     src="//ads.localhost:8000/examples/amphtml-ads/scrollbound-animation-ad.a4a.html"
     scrolling="no">
 </iframe>
+<a href="/inabox/examples/amphtml-ads/scrollbound-animation-ad.a4a.html?offset=50vh" target="_blank">open in new tab</a>
 <hr>
 <h3>Video ad</h3>
 <iframe
     src="//ads.localhost:8000/examples/amphtml-ads/video-ad.a4a.html"
     scrolling="no">
 </iframe>
+<a href="/inabox/examples/amphtml-ads/video-ad.a4a.html" target="_blank">open in new tab</a>
 <hr>
 <h3>Lightbox ad</h3>
 <iframe
     src="//ads.localhost:8000/examples/amphtml-ads/lightbox-ad.a4a.html"
     scrolling="no">
 </iframe>
+<a href="/inabox/examples/amphtml-ads/lightbox-ad.a4a.html" target="_blank">open in new tab</a>
 <hr>
 <script src="/examples/amphtml-ads/ads-tag-integration.js"></script>
 </body>
