--- a/examples/amphtml-ads/many-ads.host.html
+++ b/examples/amphtml-ads/many-ads.host.html
@@ -20,6 +20,9 @@
       margin-top: 30px;
       border-top:1px dashed #999;
     }
+    a {
+      display: block;
+    }
   </style>
 </head>
 <body>
@@ -29,6 +32,13 @@
     scrolling="no">
 </iframe>
 <a href="/inabox/examples/amphtml-ads/adchoices-1.a4a.html" target="_blank">open in new tab</a>
+<hr>
+<h3>Template ad w/ Ad Choices</h3>
+<iframe
+    src="//ads.localhost:8000/examples/amphtml-ads/adchoices-2.a4a.html"
+    scrolling="no">
+</iframe>
+<a href="/inabox/examples/amphtml-ads/adchoices-2.a4a.html" target="_blank">open in new tab</a>
 <hr>
 <h3>Carousel ad</h3>
 <iframe
