--- a/build-system/server-inabox-template.html
+++ b/build-system/server-inabox-template.html
@@ -29,7 +29,7 @@
       marginwidth="0"
       marginheight="0"
       frameborder="0"
-      data-amp-allowed="send-positions,full-overlay-frame">
+      data-amp-allowed="send-positions,full-overlay-frame,cancel-full-overlay-frame">
   </iframe>
 
   <div style="background: #eee; overflow: hidden;; height: 100vh;"></div>
