UNSTABLE: added new amp-embed type, insticator

--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -162,6 +162,7 @@
         <option>industrybrains</option>
         <option>inmobi</option>
         <option>innity</option>
+        <option>insticator</option>
         <option>invibes</option>
         <option>ix</option>
         <option>jubna</option>
@@ -1253,6 +1254,11 @@
       data-zone="62546"
       data-channel="NEWS">
   </amp-ad>
+
+  <h2>Insticator</h2>
+  <amp-embed type="insticator" width="450" height="750"
+      data-embed-id="5bf0548f-a332-4934-9d35-c9ca9e93d4ff">
+  </amp-embed>
 
   <h2>Invibes</h2>
   <amp-ad width="300" height="250"
