--- a/test/manual/loaders-new.amp.html
+++ b/test/manual/loaders-new.amp.html
@@ -69,7 +69,7 @@
 
     <script>
       // Hack to delay everything!
-      window.AMP_MODE = {test: true};
+      window.AMP_MODE = {test: true, localDev: true};
       const delay = parseInt(window.location.search.replace('?', '')) || 5000;
       document.addEventListener(
         'amp:attached',
