Update loaders test page.

--- a/test/manual/loaders-new.amp.html
+++ b/test/manual/loaders-new.amp.html
@@ -802,7 +802,7 @@
       </div>
 
       <div role="tab" option>
-        amp-ad (not implemented yet)
+        amp-ad
       </div>
       <div role="tabpanel">
         <h1>
