--- a/examples/amp-script/example.amp.html
+++ b/examples/amp-script/example.amp.html
@@ -19,8 +19,8 @@
   <script async custom-template="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
 </head>
 <body>
-  <h1>Example: example.js</h1>
-  <amp-script layout=container src="/examples/amp-script/example.js">
+  <h1>Example: Demo</h1>
+  <amp-script layout=container src="/examples/amp-script/amp-script-demo.js">
     <button id="hello">Insert Hello World!</button>
     <button id="long">Long task</button>
     <button id="amp-img">Insert amp-img</button>
