Reformat version number

--- a/tools/experiments/experiments.html
+++ b/tools/experiments/experiments.html
@@ -41,7 +41,8 @@
     }
 
     .version {
-      color: #3ab3eb;
+      color: gray;
+      font-family: 'Courier New', Courier, monospace;
     }
 
     .content {
