Add contentsquare analytics vendor

--- a/examples/analytics-vendors.amp.html
+++ b/examples/analytics-vendors.amp.html
@@ -59,6 +59,7 @@
       <option>clicky</option>
       <option>colanalytics</option>
       <option>comscore</option>
+      <option>contentsquare</option>
       <option>cxense</option>
       <option>dynatrace</option>
       <option>epica</option>
@@ -417,6 +418,18 @@ For complete documentation and additional examples please see: https://marketing
 </script>
 </amp-analytics>
 <!-- End comScore example -->
+
+<!-- comScore UDM pageview tracking -->
+<amp-analytics type="contentsquare" id="contentsquare">
+  <script type="application/json">
+  {
+    "vars": {
+      "projectId": "9999"
+    }
+  }
+  </script>
+  </amp-analytics>
+  <!-- End comScore example -->
 
 <!-- Cxense tracking -->
 <amp-analytics type="cxense" id="cxense">
