Move duplicate code to functions, and fix inabox in cdn mode.

--- a/build-system/server-inabox-friendly-template.html
+++ b/build-system/server-inabox-friendly-template.html
@@ -23,7 +23,7 @@
 
   <iframe
       name="inabox-atf"
-      srcdoc="SRC_DOC"
+      srcdoc="BODY"
       width="AD_WIDTH" height="AD_HEIGHT"
       scrolling="no"
       marginwidth="0"
