Introduce e2e environments for AMPHTML ads

--- a/build-system/server-inabox-template.html
+++ b/build-system/server-inabox-template.html
@@ -22,7 +22,7 @@
   <div style="background: #eee; overflow: hidden;; height: OFFSET;">scroll down to see the ad</div>
 
   <iframe
-      name="inabox-atf"
+      id="inabox-frame"
       src="AD_URL"
       width="AD_WIDTH" height="AD_HEIGHT"
       scrolling="no"
