--- a/examples/ads.amp.html
+++ b/examples/ads.amp.html
@@ -214,6 +214,7 @@
         <option>pulsepoint</option>
         <option>purch</option>
         <option>rbinfox</option>
+        <option>readmo</option>
         <option>realclick</option>
         <option>recomad</option>
         <option>relap</option>
@@ -1729,6 +1730,15 @@
   <amp-embed width="240" height="400"
       type="rbinfox"
       src="https://rb.infox.sg/infox/503">
+  </amp-embed>
+
+  <h2>Readmo</h2>
+  <amp-embed width="300" height="250"
+      type="readmo"
+      layout="responsive"
+      heights="(min-width:1907px) 39%, (min-width:1200px) 46%, (min-width:780px) 64%, (min-width:480px) 98%, (min-width:460px) 167%, 196%"
+      data-section="5591639"
+      data-module="end-of-article-stacked">
   </amp-embed>
 
   <h2>Realclick</h2>
