--- a/examples/amp-story/bling-link.html
+++ b/examples/amp-story/bling-link.html
@@ -60,7 +60,7 @@
                 max-width="210"
                 layout="fixed">
               </amp-img>
-              <a id="blink-2" href="https://amp.dev" role="link" class="i-amphtml-story-bling-link">
+              <a id="blink-2" href="https://amp.dev" role="link" target="_blank" class="i-amphtml-story-bling-link">
                 amp.devamp.devamp.devamp.devamp.devamp.dev
               </a>              
             </amp-story-grid-layer>
