--- a/extensions/amp-megaphone/0.1/test/validator-amp-megaphone.html
+++ b/extensions/amp-megaphone/0.1/test/validator-amp-megaphone.html
@@ -77,8 +77,8 @@
   <!-- invalid: playlist with start time -->
   <amp-megaphone height=166 data-playlist="DEM6640968282" data-start="56.4"
                   layout="fixed-height"></amp-megaphone>
-  <!-- valid: playlist without sharing buttons -->
-  <amp-megaphone height=166 data-playlist="DEM6640968282" data-sharing="false"
+  <!-- valid: playlist with sharing buttons -->
+  <amp-megaphone height=166 data-playlist="DEM6640968282" data-sharing
                   layout="fixed-height"></amp-megaphone>
 </body>
 </html>
